--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.0",
-    "morgan": "^1.9.1"
+    "knex": "^0.20.2",
+    "morgan": "^1.9.1",
+    "pg": "^7.13.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
