--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "helmet": "^3.21.0",
     "knex": "^0.20.2",
     "morgan": "^1.9.1",
-    "pg": "^7.13.0"
+    "pg": "^7.13.0",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
