--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "helmet": "^3.21.0",
+    "helmet": "^3.21.2",
     "knex": "^0.20.2",
     "morgan": "^1.9.1",
+    "path": "^0.12.7",
     "pg": "^7.14.0",
     "xss": "^1.0.6"
   },
